<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marry.quiz.Sports_Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:background="@drawable/sports3"
        android:orientation="vertical">

        <TextView
            style="@style/TextViews"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:background="@color/sports_text_view_background"
            android:text="@string/title_of_sports_quiz"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_sportsQuiz" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer_one_question_one_sports_quiz"
                    style="@style/RadioButtonAndCheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a1_sports" />

                <RadioButton
                    android:id="@+id/answer_two_question_one_sports_quiz"
                    style="@style/RadioButtonAndCheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a2_sports" />

                <RadioButton
                    android:id="@+id/answer_three_question_one_sports_quiz"
                    style="@style/RadioButtonAndCheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a3_sports_R" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_sportsQuiz" />

            <EditText
                android:id="@+id/answer_question_two_sports_quiz"
                style="@style/EditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_question2_sports"
                android:inputType="textCapWords" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_sportsQuiz" />

            <CheckBox
                android:id="@+id/answer_one_question_three_sports_quiz"
                style="@style/RadioButtonAndCheckBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a1_sports_R" />

            <CheckBox
                android:id="@+id/answer_two_question_three_sports_quiz"
                style="@style/RadioButtonAndCheckBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a2_sports_R" />

            <CheckBox
                android:id="@+id/answer_three_question_three_sports_quiz"
                style="@style/RadioButtonAndCheckBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a3_sports" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_sportsQuiz" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer_one_question_four_sports_quiz"
                    style="@style/RadioButtonAndCheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a1_sports_R" />

                <RadioButton
                    android:id="@+id/answer_two_question_four_sports_quiz"
                    style="@style/RadioButtonAndCheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a2_sports" />

                <RadioButton
                    android:id="@+id/answer_three_question_four_sports_quiz"
                    style="@style/RadioButtonAndCheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a3_sports" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/sports_button"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sports_quiz_button"
            android:onClick="seeAnswerSportsQuiz"
            android:text="@string/see_answer_sports_quiz"
            android:textColor="@color/text_color_culture_pop_button"
            android:textSize="@dimen/textSizeQuiz"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>